# hw06-rgoel777

./: Makefile  README.md  index.ipynb  index.md  setup.cfg
hw06rgoel777/: _config.yml  _toc.yml  conf.py
hw06rgoel777/.ipynb_checkpoints/: _config-checkpoint.yml
hw06rgoel777/_build/.doctrees/: environment.pickle  index.doctree  intro.doctree  markdown-notebooks.doctree  notebooks.doctree
hw06rgoel777/_build/html/: .buildinfo  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
hw06rgoel777/_build/html/.doctrees/: environment.pickle  index.doctree  intro.doctree  markdown.doctree  notebooks.doctree
hw06rgoel777/_build/html/.ipynb_checkpoints/: index-checkpoint.html  intro-checkpoint.html
hw06rgoel777/_build/html/_sources/: markdown-notebooks.ipynb
hw06rgoel777/_build/jupyter_execute/: index.ipynb  index.py  notebooks.ipynb
ligotools/: utils.py
ligotools/tests/.ipynb_checkpoints/: tests_readligo-checkpoint.py
