[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Rohan Goel
author_email     = rgoel777@berkeley.edu
description      = An installable package for LIGO data. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = == 2.7.15,
install_requires =
    tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    